--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,11 @@
 
   <title>client</title>
   <link rel="manifest" href="manifest.json">
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWpH7msNGOWi2f3djffYDSc54uukxjqY4">
+</script>
+
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
